<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multiply">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">—</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="zeros">00</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="clear">C</string>
    <string name="percentage">%</string>
    <string name="delete_last_symbol"><![CDATA[<-]]></string>
    <string name="divide">/</string>
    <string name="equals">=</string>

</resources>