<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/analogous_dark_pink"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="start"
        android:maxLines="2"
        android:textColor="@color/additional_light_grey"
        android:textSize="42sp"
        tools:text="Hello comrad" />

    <LinearLayout
        android:id="@+id/all_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/additional_light_grey"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                style="@style/GreenButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_green_button"
                android:text="@string/clear" />

            <Button
                android:id="@+id/btn_percentage"
                style="@style/GreenButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_green_button"
                android:text="@string/percentage" />

            <Button
                android:id="@+id/btn_delete_last"
                style="@style/GreenButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_green_button"
                android:text="@string/delete_last_symbol" />

            <Button
                android:id="@+id/btn_divide"
                style="@style/GreenButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_green_button"
                android:text="@string/divide" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/one" />

            <Button
                android:id="@+id/btn_two"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn_three"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/three" />

            <Button
                android:id="@+id/btn_multiply"
                style="@style/GreenButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_green_button"
                android:text="@string/multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_four"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/four" />

            <Button
                android:id="@+id/btn_five"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/five" />

            <Button
                android:id="@+id/btn_six"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/six" />

            <Button
                android:id="@+id/btn_minus"
                style="@style/GreenButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_green_button"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_seven"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btn_eight"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btn_nine"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/nine" />

            <Button
                android:id="@+id/btn_plus"
                style="@style/GreenButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_green_button"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_two_zeros"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/zeros" />

            <Button
                android:id="@+id/btn_zero"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/zero" />

            <Button
                android:id="@+id/btn_point"
                style="@style/GreyButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_grey_button"
                android:text="@string/point" />

            <Button
                android:id="@+id/btn_equals"
                style="@style/GreenButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:background="@drawable/round_dark_green_button"
                android:text="@string/equals" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>